--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/jomazu/react-skeleton.git"
   },
-  "author": "John Zukowski",
+  "author": "Jomazu",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jomazu/react-skeleton/issues"
